# ROS2-tutorial-for-begineer

./: .gitignore  README.md
ex02/install/: local_setup.sh  setup.ps1  setup.sh
ex02/install/my_cpp_ex2_pkg/share/my_cpp_ex2_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ex02/install/my_cpp_ex2_pkg/share/my_cpp_ex2_pkg/cmake/: my_cpp_ex2_pkgConfig.cmake
ex02/install/my_py_ex2_pkg/lib/my_py_ex2_pkg/: number_publisher
ex02/install/my_py_ex2_pkg/share/my_py_ex2_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ex02/my_cpp_ex2_pkg/: CMakeLists.txt  package.xml
ex02/my_py_ex2_pkg/: setup.cfg  setup.py
ex02/my_py_ex2_pkg/install/: local_setup.sh  setup.sh
ex02/my_py_ex2_pkg/my_py_ex2_pkg/: number_counter.py  number_publisher.py
install/: bashrc  local_setup.sh  setup.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  cpp_node  robot_news_station  smartphone
install/my_cpp_pkg/share/ament_index/resource_index/package_run_dependencies/: my_cpp_pkg
install/my_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: my_cpp_pkg
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_cpp_pkg/share/my_cpp_pkg/cmake/: my_cpp_pkgConfig-version.cmake  my_cpp_pkgConfig.cmake
install/my_cpp_pkg/share/my_cpp_pkg/environment/: ament_prefix_path.dsv  path.dsv
install/my_py_ex2_pkg/lib/my_py_ex2_pkg/: number_counter
install/my_py_ex2_pkg/share/my_py_ex2_pkg/: package.dsv  package.ps1  package.sh
install/my_py_pkg/lib/my_py_pkg/: add_two_int_client_no_oop
install/my_py_pkg/share/my_py_pkg/: package.sh
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh
src/install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp  template_cpp_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  hw_status_publisher.py  led_panel.py  robot_news_station.py  smartphone.py  template_python_node.py
src/my_py_pkg/my_py_pkg/install/: local_setup.sh  setup.sh
src/my_robot_interfaces/: CMakeLists.txt  package.xml
